--- a/public/phpmetrics/package_relations.html
+++ b/public/phpmetrics/package_relations.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 12:02:52        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 19:34:10        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
@@ -247,47 +247,6 @@
 
     var relations = [
     {
-        "name": "App\\Card",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "App\\Controller",
-        "size": 3000,
-        "relations": [
-            "Symfony\\Bundle\\FrameworkBundle\\Controller",
-            "Symfony\\Component\\HttpFoundation",
-            "Doctrine\\Persistence",
-            "App\\Entity",
-            "App\\Repository",
-            "Doctrine\\ORM",
-            "Symfony\\Component\\HttpFoundation\\Session",
-            "App\\Card",
-            "App\\Dice",
-            "global"
-        ]
-    },
-    {
-        "name": "Symfony\\Bundle\\FrameworkBundle\\Controller",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "Symfony\\Component\\HttpFoundation",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "Doctrine\\Persistence",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "App\\Entity",
-        "size": 3000,
-        "relations": []
-    },
-    {
         "name": "App\\Repository",
         "size": 3000,
         "relations": [
@@ -296,22 +255,12 @@
         ]
     },
     {
-        "name": "Doctrine\\ORM",
+        "name": "Doctrine\\Bundle\\DoctrineBundle\\Repository",
         "size": 3000,
         "relations": []
     },
     {
-        "name": "Symfony\\Component\\HttpFoundation\\Session",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "App\\Dice",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "global",
+        "name": "Doctrine\\Persistence",
         "size": 3000,
         "relations": []
     },
@@ -334,6 +283,62 @@
         "relations": []
     },
     {
+        "name": "App\\Card",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "App\\Entity",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "App\\Dice",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "App\\Controller",
+        "size": 3000,
+        "relations": [
+            "Symfony\\Bundle\\FrameworkBundle\\Controller",
+            "Symfony\\Component\\HttpFoundation",
+            "Symfony\\Component\\HttpFoundation\\Session",
+            "App\\Card",
+            "App\\Repository",
+            "Doctrine\\Persistence",
+            "App\\Entity",
+            "Doctrine\\ORM",
+            "global",
+            "App\\Dice"
+        ]
+    },
+    {
+        "name": "Symfony\\Bundle\\FrameworkBundle\\Controller",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "Symfony\\Component\\HttpFoundation",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "Symfony\\Component\\HttpFoundation\\Session",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "Doctrine\\ORM",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "global",
+        "size": 3000,
+        "relations": []
+    },
+    {
         "name": "App",
         "size": 3000,
         "relations": [
@@ -342,11 +347,6 @@
     },
     {
         "name": "Symfony\\Component\\HttpKernel",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "Doctrine\\Bundle\\DoctrineBundle\\Repository",
         "size": 3000,
         "relations": []
     }
