--- a/public/phpmetrics/index.html
+++ b/public/phpmetrics/index.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 12:02:51        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 19:34:10        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
             <div class="row">
@@ -65,8 +65,11 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                                <div class="label"><a href="loc.html">Lines of code</a></div>
-                <div class="number">1,083</div>
+                <span title="Last value: 1083" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>                <div class="label"><a href="loc.html">Lines of code</a></div>
+                <div class="number">1,084</div>
                 <div class="bloc-action">
                     <a href="loc.html">View details &gt;</a>
                 </div>
@@ -74,7 +77,10 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                                <div class="label"><a href="oop.html">Classes</a></div>
+                <span title="Last value: 17" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>                <div class="label"><a href="oop.html">Classes</a></div>
                 <div class="number">17</div>
                 <div class="bloc-action">
                     <a href="loc.html">View details &gt;</a>
@@ -87,7 +93,10 @@
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                                <div class="label"><a href="complexity.html">Average cyclomatic complexity by class</a></div>
+                <span title="Last value: 5.59" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>                <div class="label"><a href="complexity.html">Average cyclomatic complexity by class</a></div>
                 <div class="number">5.59</div>
                 <div class="bloc-action">
                     <a href="complexity.html">View details &gt;</a>
@@ -112,7 +121,10 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                                <div class="label"><a href="complexity.html">Average bugs by class</a></div>
+                <span title="Last value: 0.19" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>                <div class="label"><a href="complexity.html">Average bugs by class</a></div>
                 <div class="number">
                     0.19                </div>
                 <div class="bloc-action">
@@ -230,16 +242,6 @@
                                         <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.04</span>
                                     </td>
                                     <td>
-                                        <span class="path">App\Dice\DiceGraphic</span>
-                                        <span class="badge" title="Maintainability Index">95.7</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
-                                    </td>
-                                </tr>
-                                                            <tr>
-                                    <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.04</span>
-                                    </td>
-                                    <td>
                                         <span class="path">App\Entity\Book</span>
                                         <span class="badge" title="Maintainability Index">76.01</span>
                                         <span class="badge" title="Maintainability Index (w/o comments)">48.59</span>
@@ -247,12 +249,32 @@
                                 </tr>
                                                             <tr>
                                     <td>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.04</span>
+                                    </td>
+                                    <td>
+                                        <span class="path">App\Dice\DiceGraphic</span>
+                                        <span class="badge" title="Maintainability Index">95.7</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
+                                    </td>
+                                </tr>
+                                                            <tr>
+                                    <td>
                                         <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
                                     </td>
                                     <td>
-                                        <span class="path">App\Controller\BookController</span>
-                                        <span class="badge" title="Maintainability Index">65.22</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">42.7</span>
+                                        <span class="path">App\Form\BookType</span>
+                                        <span class="badge" title="Maintainability Index">65.98</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
+                                    </td>
+                                </tr>
+                                                            <tr>
+                                    <td>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                    </td>
+                                    <td>
+                                        <span class="path">App\Dice\DiceHand</span>
+                                        <span class="badge" title="Maintainability Index">82.75</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">53.2</span>
                                     </td>
                                 </tr>
                                                             <tr>
@@ -270,9 +292,19 @@
                                         <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
                                     </td>
                                     <td>
-                                        <span class="path">App\Controller\DiceGameController</span>
-                                        <span class="badge" title="Maintainability Index">57.53</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">31.68</span>
+                                        <span class="path">App\Controller\JsonController</span>
+                                        <span class="badge" title="Maintainability Index">61.07</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">29.58</span>
+                                    </td>
+                                </tr>
+                                                            <tr>
+                                    <td>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                    </td>
+                                    <td>
+                                        <span class="path">App\Controller\BookController</span>
+                                        <span class="badge" title="Maintainability Index">65.22</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">42.7</span>
                                     </td>
                                 </tr>
                                                             <tr>
@@ -290,9 +322,9 @@
                                         <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
                                     </td>
                                     <td>
-                                        <span class="path">App\Controller\JsonController</span>
-                                        <span class="badge" title="Maintainability Index">60.69</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">29.58</span>
+                                        <span class="path">App\Controller\DiceGameController</span>
+                                        <span class="badge" title="Maintainability Index">57.53</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">31.68</span>
                                     </td>
                                 </tr>
                                                             <tr>
@@ -313,26 +345,6 @@
                                         <span class="path">App\Controller\MainController</span>
                                         <span class="badge" title="Maintainability Index">80.04</span>
                                         <span class="badge" title="Maintainability Index (w/o comments)">50.18</span>
-                                    </td>
-                                </tr>
-                                                            <tr>
-                                    <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
-                                    </td>
-                                    <td>
-                                        <span class="path">App\Dice\DiceHand</span>
-                                        <span class="badge" title="Maintainability Index">82.75</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">53.2</span>
-                                    </td>
-                                </tr>
-                                                            <tr>
-                                    <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
-                                    </td>
-                                    <td>
-                                        <span class="path">App\Form\BookType</span>
-                                        <span class="badge" title="Maintainability Index">65.98</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
                                     </td>
                                 </tr>
                                                             <tr>
