--- a/public/phpmetrics/panel.html
+++ b/public/phpmetrics/panel.html
@@ -49,15 +49,18 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 12:02:51        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 19:34:10        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">1083</div>
-                <div class="label">lines of code </div>
+                <div class="number">1084</div>
+                <div class="label">lines of code <span title="Last value: 1083" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
         <div class="column">
@@ -66,7 +69,10 @@
                     17                    <small> (100                        %)
                     </small>
                 </div>
-                <div class="label">classes </div>
+                <div class="label">classes <span title="Last value: 17" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
         <div class="column">
@@ -74,7 +80,10 @@
                 <div class="number">0                    <small> (0                        %)
                     </small>
                 </div>
-                <div class="label">interfaces </div>
+                <div class="label">interfaces <span title="Last value: 0" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
 
@@ -109,7 +118,10 @@
             <div class="bloc bloc-number">
                 <div
                     class="number">1.59</div>
-                <div class="label">average LCOM </div>
+                <div class="label">average LCOM <span title="Last value: 1.59" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
     </div>
@@ -157,32 +169,32 @@
                             <td>0.04</td>
                         </tr>
                                             <tr>
-                            <td>App\Dice\DiceGraphic                                                                <span class="badge" title="Maintainability Index">95.7</span>
-                                <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
-                            </td>
-                            <td>0.04</td>
-                        </tr>
-                                            <tr>
                             <td>App\Entity\Book                                                                <span class="badge" title="Maintainability Index">76.01</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">48.59</span>
                             </td>
                             <td>0.04</td>
                         </tr>
                                             <tr>
-                            <td>App\Controller\BookController                                                                <span class="badge" title="Maintainability Index">65.22</span>
-                                <span class="badge" title="Maintainability Index (w/o comments)">42.7</span>
+                            <td>App\Dice\DiceGraphic                                                                <span class="badge" title="Maintainability Index">95.7</span>
+                                <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
+                            </td>
+                            <td>0.04</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Form\BookType                                                                <span class="badge" title="Maintainability Index">65.98</span>
+                                <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
+                            </td>
+                            <td>0.03</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Dice\DiceHand                                                                <span class="badge" title="Maintainability Index">82.75</span>
+                                <span class="badge" title="Maintainability Index (w/o comments)">53.2</span>
                             </td>
                             <td>0.03</td>
                         </tr>
                                             <tr>
                             <td>App\Controller\CardGameController                                                                <span class="badge" title="Maintainability Index">66.8</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">34.74</span>
-                            </td>
-                            <td>0.03</td>
-                        </tr>
-                                            <tr>
-                            <td>App\Controller\DiceGameController                                                                <span class="badge" title="Maintainability Index">57.53</span>
-                                <span class="badge" title="Maintainability Index (w/o comments)">31.68</span>
                             </td>
                             <td>0.03</td>
                         </tr>
@@ -196,7 +208,10 @@
             <div class="bloc bloc-number">
                 <div class="number">
                     5.59                </div>
-                <div class="label">Average cyclomatic complexity by class </div>
+                <div class="label">Average cyclomatic complexity by class <span title="Last value: 5.59" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
         <div class="column">
