--- a/public/phpmetrics/complexity.html
+++ b/public/phpmetrics/complexity.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 20:13:38        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 20:45:55        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
@@ -59,8 +59,8 @@
                 <div class="label">Average weighted method count by class <small>(CC)</small></div>
                 <div class="number">
                     8.61                </div>
-                <span title="Last value: 9.12" class="progress progress-good progress-lt">-0.51 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 8.61" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>            </div>
         </div>
@@ -69,8 +69,8 @@
                 <div class="label">Average cyclomatic complexity by class</div>
                 <div class="number">
                     5.33                </div>
-                <span title="Last value: 5.59" class="progress progress-good progress-lt">-0.26 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 5.33" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>            </div>
         </div>
@@ -79,8 +79,8 @@
                 <div class="label">Average relative System complexity</div>
                 <div class="number">
                     65.34                </div>
-                <span title="Last value: 86.08" class="progress progress-good progress-lt">-20.74 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 65.34" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>            </div>
         </div>
@@ -89,8 +89,8 @@
                 <div class="label">Average bugs by class<small>(Halstead)</small></div>
                 <div class="number">
                     0.18                </div>
-                <span title="Last value: 0.19" class="progress progress-good progress-lt">-0.01 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 0.18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>            </div>
         </div>
@@ -99,8 +99,8 @@
                 <div class="label">average defects by class <small>(Kan)</small></div>
                 <div class="number">
                     0.5                </div>
-                <span title="Last value: 0.52" class="progress progress-good progress-lt">-0.02 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 0.5" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>            </div>
         </div>
