--- a/public/phpmetrics/index.html
+++ b/public/phpmetrics/index.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 20:13:38        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 20:45:55        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
             <div class="row">
@@ -65,11 +65,11 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 1079" class="progress progress-neutral progress-gt">+4 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                <span title="Last value: 1084" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="loc.html">Lines of code</a></div>
-                <div class="number">1,083</div>
+                <div class="number">1,084</div>
                 <div class="bloc-action">
                     <a href="loc.html">View details &gt;</a>
                 </div>
@@ -77,8 +77,8 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 17" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                <span title="Last value: 18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="oop.html">Classes</a></div>
                 <div class="number">18</div>
@@ -93,8 +93,8 @@
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 5.59" class="progress progress-good progress-lt">-0.26 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 5.33" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="complexity.html">Average cyclomatic complexity by class</a></div>
                 <div class="number">5.33</div>
@@ -121,8 +121,8 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 0.19" class="progress progress-good progress-lt">-0.01 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <span title="Last value: 0.18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="complexity.html">Average bugs by class</a></div>
                 <div class="number">
@@ -323,7 +323,7 @@
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\CardGameApiController</span>
-                                        <span class="badge" title="Maintainability Index">67.43</span>
+                                        <span class="badge" title="Maintainability Index">67.95</span>
                                         <span class="badge" title="Maintainability Index (w/o comments)">35.62</span>
                                     </td>
                                 </tr>
