--- a/public/phpmetrics/panel.html
+++ b/public/phpmetrics/panel.html
@@ -49,16 +49,16 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 20:13:38        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 20:45:55        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">1083</div>
-                <div class="label">lines of code <span title="Last value: 1079" class="progress progress-neutral progress-gt">+4 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                <div class="number">1084</div>
+                <div class="label">lines of code <span title="Last value: 1084" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -69,8 +69,8 @@
                     18                    <small> (100                        %)
                     </small>
                 </div>
-                <div class="label">classes <span title="Last value: 17" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                <div class="label">classes <span title="Last value: 18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -118,8 +118,8 @@
             <div class="bloc bloc-number">
                 <div
                     class="number">1.5</div>
-                <div class="label">average LCOM <span title="Last value: 1.59" class="progress progress-good progress-lt">-0.09 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <div class="label">average LCOM <span title="Last value: 1.5" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -208,8 +208,8 @@
             <div class="bloc bloc-number">
                 <div class="number">
                     5.33                </div>
-                <div class="label">Average cyclomatic complexity by class <span title="Last value: 5.59" class="progress progress-good progress-lt">-0.26 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <div class="label">Average cyclomatic complexity by class <span title="Last value: 5.33" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
